# mixin-suite

./: .dto-strict-baseline-sensitivity.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  test-dash-file.md
.github/workflows/: ci.yml  cleanup-guard.yml  dto-strict.yml  ruff.yml  strict-module.yml
docs/: README.md  TREE-AUDIT-2026-07-09.md
docs/mixin_logging/: CHANGELOG-history.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.0.md
docs/mixin_logging/apps/: security-audit.md
docs/mixin_logging/architecture/: architecture.md  flow-trace.md
docs/mixin_logging/audits/: 2026-05-27-wsgi-adapter-security-audit.md  2026-05-28-httpx-adapter-security-audit.md  2026-06-04-asgi-adapter-security-audit.md  2026-06-04-botocore-adapter-security-audit.md  2026-06-04-celery-adapter-security-audit.md  2026-06-04-cloud-adapter-security-audit.md  2026-06-04-requests-adapter-security-audit.md  2026-06-04-restructure-conformance-security-audit.md  2026-06-04-stdlib-adapter-security-audit.md  2026-06-09-standards-sweep-round2-security-audit.md  2026-06-09-standards-sweep-security-audit.md  2026-06-19-aiohttp-adapter-security-audit.md  2026-06-19-graphql-adapter-security-audit.md  2026-06-19-grpc-adapter-security-audit.md  2026-06-19-urllib3-adapter-security-audit.md  2026-06-19-websocket-adapter-security-audit.md  2026-07-13-fastapi-adapter-security-audit.md  2026-07-21-flush-handler-security-audit.md
docs/mixin_logging/redaction/: README.md
docs/mixin_logging/reviews/: 2026-05-27-wsgi-adapter-review.md  2026-05-28-httpx-adapter-review.md  2026-06-04-asgi-adapter-review.md  2026-06-04-botocore-adapter-review.md  2026-06-04-celery-adapter-review.md  2026-06-04-cloud-adapter-review.md  2026-06-04-requests-adapter-review.md  2026-06-04-restructure-conformance-review.md  2026-06-04-stdlib-adapter-review.md  2026-06-09-standards-sweep-review.md  2026-06-09-standards-sweep-round2-review.md  2026-06-19-aiohttp-adapter-review.md  2026-06-19-graphql-adapter-review.md  2026-06-19-grpc-adapter-review.md  2026-06-19-urllib3-adapter-review.md  2026-06-19-websocket-adapter-review.md  2026-07-13-fastapi-adapter-review.md  2026-07-21-flush-handler-review.md
docs/mixin_notifications/: README.md
docs/mixin_notifications/architecture/: flow-trace.md
docs/mixin_retry/: README.md
docs/mixin_retry/architecture/: flow-trace.md
docs/mixin_sensitivity/: CHANGELOG-history.md  STATUS.md
docs/mixin_sensitivity/apps/: diagrams.md
docs/mixin_sensitivity/architecture/: architecture.md  flow-trace.md
docs/mixin_sensitivity/audits/: 2026-06-09-decorator-layer-security-audit.md
docs/mixin_sensitivity/reviews/: 2026-06-09-decorator-layer-review.md
mixin_latency/: __init__.py
mixin_latency/clock/: __init__.py  _client.py  _objects.py
mixin_latency/common/: __init__.py
mixin_latency/common/constants/: __init__.py  clock.py
mixin_latency/config/: __init__.py  _version.py
mixin_latency/tests/: __init__.py  test_latency_clock.py
mixin_logging/: __init__.py
mixin_logging/adapters/: __init__.py
mixin_logging/adapters/aiohttp/: __init__.py  aiohttp_client.py  aiohttp_objects.py
mixin_logging/adapters/asgi/: __init__.py  asgi_client.py  asgi_objects.py
mixin_logging/adapters/botocore/: __init__.py  botocore_client.py  botocore_objects.py
mixin_logging/adapters/celery/: __init__.py  celery_client.py  celery_objects.py
mixin_logging/adapters/cloud/: __init__.py  cloud_client.py  cloud_objects.py
mixin_logging/adapters/constants/: __init__.py  aiohttp.py  asgi.py  botocore.py  celery.py  cloud.py  fastapi.py  graphql.py  grpc.py  httpx.py  requests.py  stdlib.py  urllib3.py  websocket.py  wsgi.py
mixin_logging/adapters/fastapi/: __init__.py  constants.py  fastapi_client.py  fastapi_objects.py
mixin_logging/adapters/graphql/: __init__.py  graphql_client.py  graphql_objects.py
mixin_logging/adapters/grpc/: __init__.py  grpc_client.py  grpc_objects.py
mixin_logging/adapters/httpx/: __init__.py  httpx_client.py  httpx_objects.py
mixin_logging/adapters/requests/: __init__.py  requests_client.py  requests_objects.py
mixin_logging/adapters/stdlib/: README_FLUSH_HANDLER.md  __init__.py  flush_handler_client.py  flush_handler_objects.py  stdlib_client.py
mixin_logging/adapters/urllib3/: __init__.py  urllib3_client.py  urllib3_objects.py
mixin_logging/adapters/websocket/: __init__.py  websocket_client.py  websocket_objects.py
mixin_logging/adapters/wsgi/: __init__.py  wsgi_client.py  wsgi_objects.py
mixin_logging/ambient/: __init__.py  ambient_client.py
mixin_logging/common/: __init__.py
mixin_logging/common/tests/: __init__.py  (+4 more)
mixin_logging/config/: __init__.py  _version.py
mixin_logging/context/: __init__.py
mixin_logging/decorators/: __init__.py
mixin_logging/mixin/: __init__.py  mixin.py
mixin_logging/redaction/: __init__.py  redaction_client.py  redaction_objects.py
mixin_logging/tests/: helpers.py  test_helpers.py  test_suite_version_consistency.py
mixin_notifications/: __init__.py
mixin_notifications/backends/: __init__.py  _client.py  _objects.py
mixin_notifications/common/: __init__.py
mixin_notifications/config/: __init__.py  _version.py
mixin_notifications/dispatch/: __init__.py  _client.py  _objects.py
mixin_notifications/events/: __init__.py  _client.py  _objects.py
mixin_notifications/suppression/: __init__.py  _objects.py
mixin_notifications/tests/: __init__.py  conftest.py  test_backends.py  test_dispatch.py  test_egress_gate.py  test_events.py
mixin_retry/: __init__.py  executor.py  policy.py
mixin_retry/common/: __init__.py
mixin_retry/config/: __init__.py  _version.py
mixin_retry/decorators/: __init__.py
mixin_retry/tests/: test_retry_executor.py
mixin_sensitivity/: __init__.py
mixin_sensitivity/common/: __init__.py
mixin_sensitivity/config/: __init__.py  _version.py
mixin_sensitivity/decorators/: __init__.py
mixin_sensitivity/repr/: _objects.py
mixin_sensitivity/services/: __init__.py
mixin_sensitivity/tests/: test_sensitive_repr.py
tests/: test_suite_version_consistency.py
(+183 files in other folders)
